public class Cliente {

  public String nombre;

  public String dni;

  
}